started to better organize the SignalSamplingConfigurator python scripts; made "TransferFn" base class and derived classes to model system analog/digital signal chain behavior

--- a/SignalSamplingConfigurator/.vscode/launch.json
+++ b/SignalSamplingConfigurator/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "Sampling width",
             "type": "python",
             "request": "launch",
-            "program": "Tools_samplingWidth.py",
+            "program": "main.py",
             "args":[
             
             ],
