Wrote fixed point HSVtoRGB() function in C; proved with python test that it can be done without a separate overflow check

--- a/SignalSamplingConfigurator/.vscode/launch.json
+++ b/SignalSamplingConfigurator/.vscode/launch.json
@@ -25,10 +25,10 @@
             "console": "integratedTerminal"
         },   
         {
-            "name": "HSL to RGB test",
+            "name": "HSV to RGB test",
             "type": "python",
             "request": "launch",
-            "program": "HSLtoRGBtest/HSLtoRGB.py",
+            "program": "HSVtoRGBtest/HSVtoRGB.py",
             "args":[
             
             ],
