--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 *.exe
+firmware/PIC18build.X/build/
+firmware/PIC18build.X/**/*.mk
+firmware/PIC18build.X/**/*.properties
+firmware/PIC18build.X/**/*.bash
+**/__pycache__/
