WIP squash later; gain stage simulation update (getting rid of a midscale reference); tuning routine C-code

--- a/UsefulScripts/DFTFilterDesign/.vscode/launch.json
+++ b/UsefulScripts/DFTFilterDesign/.vscode/launch.json
@@ -14,5 +14,15 @@
             ],
             "console": "integratedTerminal"
         },
+        {
+            "name": "Tuning design",
+            "type": "python",
+            "request": "launch",
+            "program": "TuningDesign.py",
+            "args":[
+            
+            ],
+            "console": "integratedTerminal"
+        },
     ]
 }
